2007-11-27 [wwp]	3.1.0cvs37

	* src/addressbook.c
	* src/prefs_common.c
		Fix warning introduced by 3.1.0cvs33 (prefs_common.c)
		and 3.1.0cvs35 (addressbook.c).

2007-11-27 [holger]	3.1.0cvs36

	* src/printing.c
		Add a line separating header and body
		in the printout

2007-11-27 [wwp]	3.1.0cvs35

	* src/addressbook.c
		Fix a drag-and-drop issue introduced with 3.1.0cvs33
		(thanks to Colin) and revert disabling of cut/copy
		context menu entries upon selected groups.

2007-11-27 [holger]	3.1.0cvs34

	* src/printing.c
		Add weights to the list of supported text attributes
		for printing

2007-11-27 [wwp]	3.1.0cvs33

	* src/Makefile.am
	* src/addrcustomattr.c
	* src/addrcustomattr.h
	* src/addressbook.c
	* src/editaddress.c
	* src/editaddress.h
	* src/prefs_common.c
	* src/prefs_common.h
	* src/common/defs.h
		Provide a (customizable) list of preset attribute names
		for editing contacts (closes bug #1391).

2007-11-27 [wwp]	3.1.0cvs32

	* src/addrclip.c
	* src/addressbook.c
	* src/addritem.c
		Various fixes in the address book:
			- made copy/move of a folder to itself or its subtree
			  impossible (-> error)
			- errors messages don't show in the status bar anymore,
			  use alertpanels instead
			- simple click on group doesn't open group edit dialog
			  anymore when in contact edit embedded mode (was too itchy)
			- fixed disabling of edit button and and menu entry when
			  in contact edit embedded mode (was done in a bad and
			  ineffective way)
			- fix menu cut/paste sensitivity in treelist context
			  menu (conflicting enabling was done by different functions)
			- fix some menu item sensitivity in address list context menu
			- don't allow cut/copy of groups, it's useless as they won't
			  be copied w/ their contents
			- fix missing copy of the picture file when copying (bug #1402),
			  fix picture attribute (internal) value when moving or copying


2007-11-27 [colin]	3.1.0cvs31

	* src/folder.c
	* src/imap.c